# clip

./: CMakeLists.txt  conanfile.py
clip/: CMakeLists.txt  audio_output.h  audio_sweep.h  audio_writer.h  channel_layout.h  circle_gradient.h  codec.h  codec_context.h  color_mapped_writer.h  dictionary.h  error.h  ffmpeg_shim.h  format.h  frame.h  make_video.h  output.h  output_context.h  packet.h  pixel_format.h  reformat.h  resample.h  resolution.h  rgb_test_pattern.h  sample_format.h  sample_traits.h  stream.h  time_stamp.h  video_options.h  video_output.h  video_writer.h
clip/detail/: color_mapped_writer_detail.h
demo/: CMakeLists.txt  audio_and_video.cpp  avi.cpp  create_video.h  demo.cpp  lossless_video.cpp  video.cpp
test/: CMakeLists.txt  channel_layout_tests.cpp  dictionary_tests.cpp  sample_format_tests.cpp
tools/: CMakeLists.txt  list_encoders.cpp
